--- a/popup.html
+++ b/popup.html
@@ -5,6 +5,7 @@
     <style>
         body {
             padding: 20px;
+            width: 200px;
         }
 
         .center {
@@ -13,10 +14,17 @@
             justify-content: center;
         }
 
-        #changeColor {
+        h2 {
+            margin: 0;
+            margin-bottom: 20px;
+        }
+
+        .button {
             color: white;
-            background: red !important;
+            display: block;
+            background: red;
             padding-top: 10px;
+            margin-top: 10px;
             padding-bottom: 10px;
             padding-right: 20px;
             padding-left: 20px;
@@ -25,19 +33,39 @@
             -moz-box-shadow: 0px 0px 45px -10px rgba(0, 0, 0, 0.6);
             box-shadow: 0px 0px 45px -10px rgba(0, 0, 0, 0.6);
             border-radius: 5px;
-            transition: all 0.2s ease-in-out;
+            transition: all 0.1s ease-in-out;
         }
 
-        #changeColor:hover {
+        .button:hover {
             text-decoration: none;
-            background: rgb(255, 59, 59) !important;
+            background: rgb(252, 108, 108);
+        }
+
+        .active {
+            background: green !important;
+        }
+
+        .active:hover {
+            background: rgb(59, 182, 59) !important;
+        }
+
+        #confirm {
+            display: none
         }
     </style>
 </head>
 
 <body>
     <div class="center">
-        <a href="#" id="activate">Deactivate</a>
+        <div style="text-align: center">
+            <h2>Single Tab</h2>
+            <a href="#" id="activate" class="button">Deactivate</a>
+            <div id="confirm">
+                <p>Confirm and close all but one tab?</p>
+                <a href="#" id="yesButton" class="button active">Yes</a>
+                <a href="#" id="noButton" class="button">No</a>
+            </div>
+        </div>
     </div>
     <script src="popup.js"></script>
 </body>
