--- a/html/popup.html
+++ b/html/popup.html
@@ -67,7 +67,7 @@
             </div>
         </div>
     </div>
-    <script src="popup.js"></script>
+    <script src="../js/popup.js"></script>
 </body>
 
 </html>
